# stocks

./: .PackageInfo  .gitignore  App.cpp  App.h  CMakeLists.txt  Makefile  README.md  StocksPanel.plist  build.sh
.github/workflows/: cmake.yml
CMakeModules/: UseHaiku.cmake
api/: ApiBuilder.cpp  ApiBuilder.h  Financialmodelingprep.cpp  Financialmodelingprep.h  NetRequester.cpp  NetRequester.h  StockConnector.cpp  StockConnector.h  UrlBuilder.h
gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
gui/chartView/: CMakeLists.txt  ChartView.cpp  ChartView.h
gui/stocksPanel/: BListItemView.cpp  BListItemView.h  CMakeLists.txt  FoundShareListItem.cpp  FoundShareListItem.h  QuoteListItem.cpp  QuoteListItem.h  SearchFieldControl.cpp  SearchFieldControl.h  ShareListItem.cpp  StockListItem.cpp  StockListItem.h  StockListItemBuilder.cpp  StockListItemBuilder.h  StocksPanel.cpp  StocksPanel.h  StocksPanelView.cpp  StocksPanelView.h
gui/stocksPanel/listView/: FoundShareListItem.cpp  FoundShareListItem.h  QuoteListItem.cpp  ShareListItem.cpp  ShareListItem.h
gui/utils/: DelayedQueryTimer.cpp  DelayedQueryTimer.h  EscapeCancelFilter.h  ListItemDrawer.cpp  ListItemDrawer.h  QuoteFormatter.h
headers/config/: types.h
headers/os/: BeBuild.h
headers/posix/: endian.h  limits.h  stdint.h  unistd.h
headers/posix/sys/: types.h
locales/: en.catkeys
model/: Portfolio.cpp  Quote.h  SearchResultItem.cpp  SearchResultList.cpp  SearchResultList.h
package/data/deskbar/menu/Applications/: Stocks
source/: App.cpp  App.h  Stocks.rdef
source/api/: ApiBuilder.cpp  ApiBuilder.h  FinancialmodelingApiKey.cpp  FinancialmodelingApiKey.cpp.in  FinancialmodelingApiKey.h  FinancialmodelingApiKey.h.in  Financialmodelingprep.cpp  Financialmodelingprep.h  NetRequester.cpp  NetRequester.h  StockConnector.h  UrlBuilder.cpp
source/gui/: Colors.cpp  Colors.h  MainWindow.cpp  MainWindow.h
source/gui/chartView/: ChartTimeRangeBar.cpp  ChartTimeRangeBar.h  ChartView.cpp  ChartView.h  DetailsChart.cpp  DetailsChart.h  DetailsDataList.cpp  DetailsDataList.h  DetailsHeadline.cpp  DetailsHeadline.h  DetailsView.cpp  DetailsView.h
source/gui/chartView/drawer/: DataSeriesLimiter.cpp  DataSeriesLimiter.h  DateTimeCalculator.cpp  DateTimeCalculator.h  GridlineDrawer.cpp  GridlineDrawer.h  SeriesDrawer.cpp  SeriesDrawer.h  VerticalAxisDrawer.cpp  VerticalAxisDrawer.h
source/gui/stocksPanel/: ListItemConstants.h  SearchFieldControl.cpp  SearchFieldControl.h  StockListItemBuilder.cpp  StocksPanelView.cpp  StocksPanelView.h
source/gui/stocksPanel/listView/: FoundShareListItem.cpp  FoundShareListItem.h  QuoteListItem.cpp  QuoteListItem.h  ShareListItem.cpp  ShareListItem.h
source/gui/utils/: DelayedQueryTimer.cpp  DelayedQueryTimer.h  EscapeCancelFilter.cpp  ListItemDrawer.cpp  ListItemDrawer.h  QuoteFormatter.cpp  QuoteFormatter.h
source/handler/: HistoricalPriceResultHandler.cpp  HistoricalPriceResultHandler.h  QuoteResultHandler.cpp  QuoteResultHandler.h
source/model/: HistoricalPrice.cpp  HistoricalPrice.h  HistoricalPriceList.cpp  HistoricalPriceList.h  Portfolio.cpp  Portfolio.h  Quote.cpp  Quote.h  QuotesRepository.cpp  QuotesRepository.h  SearchResultItem.cpp  SearchResultItem.h  SearchResultList.cpp  SearchResultList.h  SelectionOfSymbols.cpp  SelectionOfSymbols.h  TimeRange.h
source/model/linkedRequestQuoteStore/: BaseLinkedRequestToQuoteStore.cpp  BaseLinkedRequestToQuoteStore.h  QuoteRequestStore.cpp  QuoteRequestStore.h
source/quoteUpdateJob/: QuoteUpdateJob.cpp  QuoteUpdateJob.h
source/repository/: QuotesRepository.cpp  QuotesRepository.h  Repository.cpp  Repository.h  RepositoryConfig.cpp  RepositoryConfig.cpp.in  RepositoryConfig.h  RepositoryConfig.h.in
source/utils/: BaseThreadedJob.cpp  BaseThreadedJob.h  ObservableSubject.cpp  ObservableSubject.h  Observer.cpp  Observer.h
tests/: test.cpp
tests/gui/chartview/drawer/: TestDateTimeCalculator.cpp
tests/gui/utils/: TestQuoteFormatter.cpp  TestQuoteFormatter.h
tests/repository/: TestRepository.cpp  TestRepositoryConfig.cpp
utils/: Timer.cpp  Timer.h
